Improved hover, nav-bar and #education spacing issue

--- a/css/design.css
+++ b/css/design.css
@@ -31,10 +31,10 @@ a{
 	margin: 10px;
 	color: #110000;
 	text-decoration: none;
-}
+} 
 
-a:hover{
-	color: #cccccc;
+.nav>li a:hover{
+    background-color: #E0E0E0 !important;
 }
 
 #classes{
@@ -54,7 +54,9 @@ a:hover{
 	text-align: center;
 	font-size: 20px;
 }
-
+#headings{
+    text-decoration: underline;
+}
 #skills{
 	text-align: center;
 	float: none;
@@ -69,7 +71,7 @@ a:hover{
 	border: .1rem solid black;
 	background-color: #cccccc;
 	float: left;
-	height: 100%;
+	height: 375px;
 }
 
 #honors{
@@ -77,12 +79,12 @@ a:hover{
 	border: .1rem solid black;
 	background-color: #cccccc;
 	float: right;
-	height: 100%;
+	height: 375px;
 }
 
-header{
+/* header{
 	text-align: center; 
-}
+} */
 
 #school{
 	border: .1rem solid;
